src/objects/Employee__c.object
<CustomObject>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <pluralLabel>Employees</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Employee #</label>
        <displayFormat>EMP-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>

    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <type>Text</type>
        <length>9</length>
        <unique>true</unique>
        <description>Personally identifiable information - highly sensitive.</description>
    </fields>

    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
        <description>Compensation data - confidential.</description>
    </fields>

    <fields>
        <fullName>ManagerNotes__c</fullName>
        <label>Manager Notes</label>
        <type>LongTextArea</type>
        <length>32768</length>
        <description>Sensitive manager comments.</description>
    </fields>
</CustomObject>